opam-version: "2.0"
synopsis: "Self-adjusting computations"
description: """\
This is a small, self-contained library for self-adjusting (incremental) computations.
It was written for OCurrent, but can be used separately too.

It is similar to Jane Street's incremental library, but much smaller and
has no external dependencies.

It is also similar to the react library, but the results do not depend on the
behaviour of the garbage collector. In particular, functions stop being called
as soon as they are no longer needed."""
maintainer: ["talex5@gmail.com", "Tim McGilchrist <timmcgil@gmail.com>"]
authors: "talex5@gmail.com"
homepage: "https://github.com/ocurrent/current_incr"
doc: "https://ocurrent.github.io/current_incr/"
bug-reports: "https://github.com/ocurrent/current_incr/issues"
depends: [
  "ocaml" {>= "4.12.0"}
  "dune" {>= "2.8"}
  "alcotest" {>= "1.6" & with-test}
  "crowbar" {>= "0.2" & with-test}
  "mdx" {>= "1.10.0" & with-test}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/ocurrent/current_incr.git"
license: "Apache-2.0"
